#90-modify-cross-entropy-error ``` modified:   04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/4_Cross_entropy_error_with_mini_batch.ipynb modified:   04_DeepLearning_from_Scratch/4_ch4/4_Gradient/2_Slope_on_ANN.ipynb modified:   04_DeepLearning_from_Scratch/common/functions.py modified:   99_Utility/sa_source_activate.sh new file:   99_Utility/sd_source_deactivate.sh ```

--- a/04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/4_Cross_entropy_error_with_mini_batch.ipynb
+++ b/04_DeepLearning_from_Scratch/4_ch4/2_Loss_function/4_Cross_entropy_error_with_mini_batch.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "def cross_entropy_error_with_batch (y, t):\n",
     "    delta = 1e-7\n",
-    "    if y.ndim == 1:\n",
+    "    if y.ndim == 1: # batch size 1\n",
     "        y = y.reshape(1, y.size)\n",
     "        t = t.reshape(1, t.size)\n",
     "    batch_size = y.shape[0]\n",
@@ -152,6 +152,13 @@
    "source": [
     "cross_entropy_error_with_batch(np.array(y2), np.array(t))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -254,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "array([5, 4, 7, 8, 1, 1, 0, 8, 7, 3], dtype=uint8)"
+       "array([3, 2, 6, 0, 3, 0, 8, 7, 9, 6], dtype=uint8)"
       ]
      },
      "execution_count": 16,
@@ -274,16 +281,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "array([[0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
        "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
        "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.]])"
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.]])"
       ]
      },
      "execution_count": 17,
@@ -382,7 +389,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/rwoo/02_WorkSpace/13_DeepLearning_WorkSpace/DeepLearning-Study/99_Utility/venv/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: overflow encountered in exp\n",
+      "/Users/rwoo/miniconda3/envs/DeepLearning-Study/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: overflow encountered in exp\n",
       "  \n"
      ]
     }
@@ -400,7 +407,7 @@
     {
      "data": {
       "text/plain": [
-       "4.275092828273773"
+       "3.0650281846523284"
       ]
      },
      "execution_count": 24,
@@ -443,7 +450,7 @@
     {
      "data": {
       "text/plain": [
-       "4.275092697143554"
+       "3.0650283813476564"
       ]
      },
      "execution_count": 26,
