#1-install-by-docker ``` modified:   01_Local_Tensorflow_Official_Docker/01_Install/01_by_Docker.md modified:   04_DeepLearning_from_Scratch/3_ch3/3/01_multidimensional_arrays.ipynb modified:   04_DeepLearning_from_Scratch/3_ch3/3/02_matrix_dot_product.ipynb modified:   04_DeepLearning_from_Scratch/3_ch3/3/03_ANN_dot.ipynb deleted:    99_Utility/03_modify_number_of_file_on_README.sh deleted:    99_Utility/reNumberFiles.sh deleted:    99_Utility/reNumberFolder.py ```

--- a/04_DeepLearning_from_Scratch/3_ch3/3/02_matrix_dot_product.ipynb
+++ b/04_DeepLearning_from_Scratch/3_ch3/3/02_matrix_dot_product.ipynb
@@ -33,6 +33,27 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -47,7 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,54 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 9, 12, 15],\n",
-       "       [19, 26, 33]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ac = np.dot(a, c)\n",
-    "ac"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 3) 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ac.shape, ac.ndim)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 9, 12, 15],\n",
-       "       [19, 26, 33],\n",
-       "       [29, 40, 51]])"
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
       ]
      },
      "execution_count": 7,
@@ -121,8 +124,7 @@
     }
    ],
    "source": [
-    "bc = np.dot(b, c)\n",
-    "bc"
+    "c"
    ]
   },
   {
@@ -134,12 +136,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(2, 3) 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "ac = np.dot(a, c)\n",
+    "print(ac.shape, ac.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9, 12, 15],\n",
+       "       [19, 26, 33]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(3, 3) 2\n"
      ]
     }
    ],
    "source": [
+    "bc = np.dot(b, c)\n",
     "print(bc.shape, bc.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9, 12, 15],\n",
+       "       [19, 26, 33],\n",
+       "       [29, 40, 51]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bc"
    ]
   }
  ],
@@ -159,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
