--- a/04_DeepLearning_from_Scratch/3_ch3/3/01_multidimensional_arrays.ipynb
+++ b/04_DeepLearning_from_Scratch/3_ch3/3/01_multidimensional_arrays.ipynb
@@ -109,12 +109,20 @@
     }
    ],
    "source": [
-    "c = np.array([[[1, 2, 3, 4],\n",
-    "               [5, 6, 7, 8],\n",
-    "               [9, 10, 11, 12]],\n",
-    "              [[11, 12, 13, 14],\n",
-    "               [15, 16, 17, 18],\n",
-    "               [19, 20, 21, 22]]])\n",
+    "c = np.array(\n",
+    "    [\n",
+    "        [\n",
+    "            [1, 2, 3, 4],\n",
+    "            [5, 6, 7, 8],\n",
+    "            [9, 10, 11, 12]\n",
+    "        ],\n",
+    "        [\n",
+    "            [11, 12, 13, 14],\n",
+    "            [15, 16, 17, 18],\n",
+    "            [19, 20, 21, 22]\n",
+    "        ]\n",
+    "    ]\n",
+    ")\n",
     "c"
    ]
   },
@@ -152,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
