#2-modify-3-6 ``` renamed:    04_DeepLearning_from_Scratch/3_ch3/6_MNIST/1_MNIST_dataset.ipynb -> 04_DeepLearning_from_Scratch/3_ch3/3.6_손글씨_숫자_인식/3.6.1_MNIST_dataset.ipynb renamed:    04_DeepLearning_from_Scratch/3_ch3/6_MNIST/2_predict_with_ANN_forward_propagation.ipynb -> 04_DeepLearning_from_Scratch/3_ch3/3.6_손글씨_숫자_인식/3.6.2_predict_with_ANN_forward_propagation.ipynb renamed:    04_DeepLearning_from_Scratch/3_ch3/6_MNIST/3_predict_with_ANN_forward_propagation_with_batch.ipynb -> 04_DeepLearning_from_Scratch/3_ch3/3.6_손글씨_숫자_인식/3.6.3_predict_with_ANN_forward_propagation_with_batch.ipynb new file:   99_Utility/02_git_squash_commit.py new file:   99_Utility/03_modify_number_of_file_on_README.sh modified:   99_Utility/change_A_to_B.txt modified:   README.md ```

--- a/04_DeepLearning_from_Scratch/3_ch3/3.6_손글씨_숫자_인식/3.6.2_predict_with_ANN_forward_propagation.ipynb
+++ b/04_DeepLearning_from_Scratch/3_ch3/3.6_손글씨_숫자_인식/3.6.2_predict_with_ANN_forward_propagation.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset.mnist import load_mnist\n",
+    "from dataset.mnist import load_mnist # ../../dataset 폴더안의 mnist.py 를 읽어서 load_mnist 함수를 호출한다.\n",
     "import pickle\n",
     "import numpy as np"
    ]
@@ -35,9 +35,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 784) (10000,)\n"
+     ]
+    }
+   ],
    "source": [
-    "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=True)"
+    "(x_train, t_train), (x_test, t_test) = load_mnist(flatten=True, normalize=True)\n",
+    "print(x_test.shape, t_test.shape)"
    ]
   },
   {
@@ -171,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
