--- a/04_DeepLearning_from_Scratch/4_신경망_학습/2_손실_함수/1_평균_제곱_오차.ipynb
+++ b/04_DeepLearning_from_Scratch/4_신경망_학습/2_손실_함수/1_평균_제곱_오차.ipynb
@@ -6,13 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pickle"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_squared_error(y, t):\n",
+    "    return 0.5 * np.sum((y-t)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cross_entropy_error(y, t):\n",
-    "    delta = 1e-7\n",
-    "    return -np.sum(t*np.log(y+delta))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.510825457099338"
+       "0.09750000000000003"
       ]
      },
      "execution_count": 4,
@@ -49,7 +47,7 @@
     }
    ],
    "source": [
-    "cross_entropy_error(np.array(y1), np.array(t))"
+    "mean_squared_error(np.array(y1), np.array(t))"
    ]
   },
   {
@@ -60,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "2.302584092994546"
+       "0.5975"
       ]
      },
      "execution_count": 5,
@@ -69,7 +67,7 @@
     }
    ],
    "source": [
-    "cross_entropy_error(np.array(y2), np.array(t))"
+    "mean_squared_error(np.array(y2), np.array(t))"
    ]
   }
  ],
@@ -89,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
