--- a/04_DeepLearning_from_Scratch/4_신경망_학습/2_손실_함수/2_교차_엔트로피_오차.ipynb
+++ b/04_DeepLearning_from_Scratch/4_신경망_학습/2_손실_함수/2_교차_엔트로피_오차.ipynb
@@ -1,20 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MSE"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pickle"
+    "import numpy as np"
    ]
   },
   {
@@ -23,8 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mean_squared_error(y, t):\n",
-    "    return 0.5 * np.sum((y-t)**2)"
+    "y1 = [0.1, 0.05, 0.6, 0.0, 0.05, 0.1, 0.0, 0.1, 0.0, 0.0]\n",
+    "y2 = [0.1, 0.05, 0.1, 0.0, 0.05, 0.1, 0.0, 0.6, 0.0, 0.0]\n",
+    "t  = [  0,    0,   1,   0,    0,   0,   0,   0,   0,   0]"
    ]
   },
   {
@@ -33,9 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1 = [0.1, 0.05, 0.6, 0.0, 0.05, 0.1, 0.0, 0.1, 0.0, 0.0]\n",
-    "y2 = [0.1, 0.05, 0.1, 0.0, 0.05, 0.1, 0.0, 0.6, 0.0, 0.0]\n",
-    "t  = [0, 0, 1, 0, 0, 0, 0, 0, 0, 0]"
+    "def cross_entropy_error(y, t):\n",
+    "    delta = 1e-7\n",
+    "    return -np.sum(t*np.log(y+delta))"
    ]
   },
   {
@@ -46,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "0.09750000000000003"
+       "0.510825457099338"
       ]
      },
      "execution_count": 4,
@@ -55,7 +48,7 @@
     }
    ],
    "source": [
-    "mean_squared_error(np.array(y1), np.array(t))"
+    "cross_entropy_error(np.array(y1), np.array(t))"
    ]
   },
   {
@@ -66,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5975"
+       "2.302584092994546"
       ]
      },
      "execution_count": 5,
@@ -75,7 +68,7 @@
     }
    ],
    "source": [
-    "mean_squared_error(np.array(y2), np.array(t))"
+    "cross_entropy_error(np.array(y2), np.array(t))"
    ]
   }
  ],
@@ -95,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
