--- a/04_DeepLearning_from_Scratch/4_신경망_학습/2_손실_함수/3_미니배치_평균_제곱_오차.ipynb
+++ b/04_DeepLearning_from_Scratch/4_신경망_학습/2_손실_함수/3_미니배치_평균_제곱_오차.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MSE "
+    "# 1 평균 제곱 오차"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "y1 = [0.1, 0.05, 0.6, 0.0, 0.05, 0.1, 0.0, 0.1, 0.0, 0.0]\n",
     "y2 = [0.1, 0.05, 0.1, 0.0, 0.05, 0.1, 0.0, 0.6, 0.0, 0.0]\n",
-    "t  = [0, 0, 1, 0, 0, 0, 0, 0, 0, 0]"
+    "t  = [  0,    0,   1,   0,    0,   0,   0,   0,   0,   0]"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MSE with mini batch"
+    "# 2 미니배치 평균 제곱 오차"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apply MSE with mini batch on Prediction"
+    "# 3 미니배치 신경망 추론에 대한 평균 제곱 오차"
    ]
   },
   {
@@ -176,12 +176,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60000, 784) 2 (60000,) 1\n"
+      "(60000, 784) 2\n",
+      "(60000,) 1\n"
      ]
     }
    ],
    "source": [
-    "print(x_train.shape, x_train.ndim, t_train.shape, t_train.ndim)"
+    "print(x_train.shape, x_train.ndim)\n",
+    "print(t_train.shape, t_train.ndim)"
    ]
   },
   {
@@ -222,8 +224,8 @@
     {
      "data": {
       "text/plain": [
-       "array([54116, 33984, 38195, 21720, 28339, 21925, 36818, 20494, 51420,\n",
-       "       38533])"
+       "array([35065,  8756, 48352, 40350, 32818, 54605,  2180, 11335,  2184,\n",
+       "       17734])"
       ]
      },
      "execution_count": 14,
@@ -242,19 +244,25 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 784) (10,)\n",
-      "2 1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "x_batch = x_train[batch_mask]\n",
-    "t_batch = t_train[batch_mask]\n",
-    "print(x_batch.shape, t_batch.shape)\n",
-    "print(x_batch.ndim, t_batch.ndim)"
+    "x_batch"
    ]
   },
   {
@@ -265,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 6, 2, 3, 6, 8, 7, 6, 7, 5], dtype=uint8)"
+       "array([9, 3, 3, 5, 2, 1, 3, 0, 2, 3], dtype=uint8)"
       ]
      },
      "execution_count": 16,
@@ -274,6 +282,7 @@
     }
    ],
    "source": [
+    "t_batch = t_train[batch_mask]\n",
     "t_batch"
    ]
   },
@@ -283,21 +292,40 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 784) 2\n",
+      "(10,) 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_batch.shape, x_batch.ndim)\n",
+    "print(t_batch.shape, t_batch.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
        "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.]])"
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,23 +337,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'dict'>\n",
-      "(784, 50) (50, 100) (100, 10)\n",
-      "(50,) (100,) (10,)\n"
+      "(10, 10) 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t_batch_with_onehot.shape, t_batch_with_onehot.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
     "with open('../../dataset/sample_weight.pkl', 'rb') as f:\n",
     "    network = pickle.load(f)\n",
-    "print(type(network))\n",
+    "print(type(network))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(784, 50) (50, 100) (100, 10)\n",
+      "(50,) (100,) (10,)\n"
+     ]
+    }
+   ],
+   "source": [
     "W1, W2, W3 = network['W1'], network['W2'], network['W3']\n",
     "b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
     "print(W1.shape, W2.shape, W3.shape)\n",
@@ -334,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,18 +404,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def softmax(x):\n",
-    "    x = x - np.max(x)\n",
+    "    x = (x - np.min(x)) / (np.max(x) - np.min(x))\n",
+    "#     x = x - np.max(x)\n",
     "    return np.exp(x) / np.sum(np.exp(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,48 +440,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:2: RuntimeWarning: overflow encountered in exp\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00751473, 0.00856624, 0.00847413, 0.00902363, 0.01347499,\n",
+       "        0.00902964, 0.00866029, 0.01111743, 0.01028774, 0.01422571],\n",
+       "       [0.00915654, 0.00971266, 0.01031822, 0.01431501, 0.00836841,\n",
+       "        0.01085845, 0.00912965, 0.00835815, 0.01050635, 0.00876089],\n",
+       "       [0.00876158, 0.00923481, 0.0081854 , 0.01257091, 0.00928691,\n",
+       "        0.01343095, 0.00799923, 0.00988321, 0.01050298, 0.00987788],\n",
+       "       [0.01010822, 0.00992644, 0.00970848, 0.01321572, 0.00760743,\n",
+       "        0.01300842, 0.00946391, 0.00797639, 0.01076271, 0.00805982],\n",
+       "       [0.0080649 , 0.01099056, 0.0126191 , 0.01177226, 0.00952118,\n",
+       "        0.00935932, 0.01096983, 0.00753878, 0.01035364, 0.00804202],\n",
+       "       [0.00571559, 0.01512553, 0.01012725, 0.01031477, 0.00942276,\n",
+       "        0.00945375, 0.00927326, 0.00999755, 0.01165836, 0.00987102],\n",
+       "       [0.00834639, 0.01057018, 0.01319904, 0.01404658, 0.00763101,\n",
+       "        0.00953475, 0.00803101, 0.00931381, 0.01096654, 0.00838253],\n",
+       "       [0.01553659, 0.00684356, 0.01080276, 0.00992126, 0.00804119,\n",
+       "        0.01172992, 0.00982436, 0.00916347, 0.00935793, 0.00880245],\n",
+       "       [0.01192665, 0.00865928, 0.01180614, 0.01031026, 0.00798841,\n",
+       "        0.01153742, 0.01046657, 0.00731728, 0.01177038, 0.00772174],\n",
+       "       [0.0076811 , 0.01022381, 0.00796376, 0.01348437, 0.00918371,\n",
+       "        0.01147643, 0.0072336 , 0.0100357 , 0.01123737, 0.01230895]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_batch = predict(x_batch)\n",
+    "y_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 10)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rwoo/02_WorkSpace/13_DeepLearning_WorkSpace/DeepLearning-Study/99_Utility/venv/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: overflow encountered in exp\n",
-      "  \n"
+      "(10, 10) 2\n"
      ]
     }
    ],
    "source": [
-    "y_batch = predict(x_batch)\n",
-    "print(y_batch.shape)"
+    "print(y_batch.shape, y_batch.ndim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "161.37484130859374"
+       "75.18992309570312"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mean_squared_error_with_batch(y_batch, t_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00751473, 0.00856624, 0.00847413, 0.00902363, 0.01347499,\n",
+       "       0.00902964, 0.00866029, 0.01111743, 0.01028774, 0.01422571],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_batch[0]"
    ]
   }
  ],
@@ -440,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
